[feat#178] copilot 반영